[package]
name = "teleport-collectd"
version = "0.1.0"
authors = [
    "Denis Kolodin <deniskolodin@gmail.com>",
    "overfloat <rillrate@gmail.com>",
]
edition = "2018"
repository = "https://github.com/rate-technology/rill"
homepage = "https://github.com/rate-technology/rill"
description = "Dynamic logging and tracing system"
categories = ["development-tools::debugging"]
keywords = ["logging"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.35"
collectd-plugin = "0.13.0"
log = "0.4.11"
rayon = "1.5.0"
rill = "0.5.1"

[lib]
crate-type = ["cdylib"]

[features]
bindgen = ["collectd-plugin/bindgen"]
default = []
