[package]
name = "teleport-collectd"
version = "0.1.0"
authors = [
    "Denis Kolodin <deniskolodin@gmail.com>",
    "overfloat <rillrate@gmail.com>",
]
edition = "2018"
repository = "https://github.com/rate-technology/rill"
homepage = "https://github.com/rate-technology/rill"
description = "Dynamic logging and tracing system"
categories = ["development-tools::debugging"]
keywords = ["logging"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.38"
collectd-plugin = "0.13.0"
log = "0.4.13"
once_cell = "1.5.2"
rayon = "1.5.0"
rill = "0.12.0"
rill-protocol = "0.12.0"
strum = "0.20.0"

[lib]
crate-type = ["cdylib"]

[features]
bindgen = ["collectd-plugin/bindgen"]
default = []
