[package]
name = "teleport-collectd"
version = "0.2.0"
authors = [
    "Denis Kolodin <deniskolodin@gmail.com>",
    "overfloat <rillrate@gmail.com>",
]
edition = "2018"
repository = "https://github.com/rate-technology/teleport-collectd"
homepage = "https://github.com/rate-technology/teleport-collectd"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "RillRate plugin for collectd"

[dependencies]
anyhow = "1.0.38"
log = "0.4.13"
once_cell = "1.5.2"
rayon = "1.5.0"
rillrate = "0.17.0"
strum = "0.20.0"

[dependencies.collectd-plugin]
version = "0.13.1-pre"
git = "ssh://git@github.com/rate-technology/collectd-rust-plugin"

[lib]
crate-type = ["cdylib"]

[features]
bindgen = ["collectd-plugin/bindgen"]
default = []
